set_ssl_ca_file: don't try unreffing tlsdb if it's NULL

If g_tls_file_database_new() failed for any reason but
G_TLS_ERROR_UNAVAILABLE, we don't create a fallback DB and so tlsdb stays
NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=691930